QPID-6248 [linearstore] Symlink creation fails if store dir path is not absolute

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk@1641689 13f79535-47bb-0310-9956-ffa450edef68